--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="./style.css" type="text/css"
+    <title>Home Page</title>
   </head>
-</html>
+  <header>
+    <nav>
+      <ul>
+        <a href="./index.html"><li>Home</li></a>
+        <a href="./aboutme.html"><li>About me</li></a>
+      </ul>
+    </nav>
+  </header>
+  <html>
